Add CircleCI test

--- a/config/lighttpd/server.conf
+++ b/config/lighttpd/server.conf
@@ -14,7 +14,7 @@ server.modules        += (
 )
 
 # Setup server
-server.port           = env.LIGHTTPD_PORT
+server.port           = 443
 server.document-root  = htdocs_dir
 
 # Setup authentication and authorization
@@ -46,7 +46,6 @@ static-file.exclude-extensions = (".cgi")
 
 # Copy environment variables
 setenv.add-environment = (
-  "SIMPLE_CA_DIR"     => env.SIMPLE_CA_DIR,
   "CA_CRT"            => env.CA_CRT,
   "CA_KEY"            => env.CA_KEY,
   "CA_KEY_PWD_FILE"   => env.CA_KEY_PWD_FILE
