--- a/config/ssl/openssl.cnf
+++ b/config/ssl/openssl.cnf
@@ -8,7 +8,7 @@
 # than one openssl command.
 
 [ default ]
-dir                     = %%SIMPLE_CA_DIR%%     # Top dir
+dir                     = /var/lib/simple-ca   # Top dir
 
 # The next part of the configuration file is used by the openssl req command.
 
