--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,10 @@
 # https://docs.docker.com/engine/reference/builder/#dockerignore-file
 
+# Git Repository
+.git
+
+# Tests
+spec
+
 # Simple-CA secrets
 secrets
