--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # https://git-scm.com/docs/gitignore
 
+# Ignore backup files
+*~
+
 # Info about running containers
 .container_id
-.container_exists
 
 # Local Makefile
 docker.local.mk
