Refactor docker-entrypoint scripts

--- a/config/etc/lighttpd/server.conf
+++ b/config/etc/lighttpd/server.conf
@@ -5,7 +5,7 @@
 ################################################################################
 
 # Load necessary modules
-server.modules        += (
+server.modules            += (
   "mod_auth",
   "mod_authn_file",
   "mod_cgi",
@@ -13,27 +13,16 @@ server.modules        += (
   "mod_setenv"
 )
 
-# Setup server
+# Document root
+server.document-root    = htdocs_dir
+
+# Listen only on TCP port 443
 server.port           = 443
-server.document-root  = htdocs_dir
 
-# Setup authentication and authorization
-auth.backend          = "htdigest"
-auth.backend.htdigest.userfile = env.SERVER_USER_DB
-# NOTE: mod_rewrite rules are always executed before everything else, so your
-# mod_auth configuration must match the rewritten urls!
-auth.require          = (
-  "/simple-ca.cgi/sign" => (
-    "method"          => "basic",
-    "realm"           => env.CA_USER_REALM,
-    "require"         => "user=" + env.CA_USER
-  )
-)
-
-# Setup HTTPS
+# Enable HTTPS
 ssl.engine            = "enable"
-ssl.pemfile           = env.SERVER_CRT
-ssl.ca-file           = env.CA_CRT
+ssl.pemfile           = env.SERVER_CRT_FILE
+ssl.ca-file           = env.CA_CRT_FILE
 ssl.use-sslv3         = "disable"
 # TLS hardening - enable TLSv1.2 ciphers only
 ssl.cipher-list       = "EECDH+AES:EDH+AES:!SHA"
@@ -44,9 +33,22 @@ url.rewrite-once      = ( "^/(.*)" => "/simple-ca.cgi/$1" )
 dir-listing.activate  = "disable"
 static-file.exclude-extensions = (".cgi")
 
+# Setup Simple CA signing endpoint authentication and authorization
+auth.backend          = "htdigest"
+auth.backend.htdigest.userfile = env.SERVER_USERDB_FILE
+# NOTE: mod_rewrite rules are always executed before everything else, so your
+# mod_auth configuration must match the rewritten urls!
+auth.require          = (
+  "/simple-ca.cgi/sign" => (
+    "method"          => "basic",
+    "realm"           => env.CA_USER_REALM,
+    "require"         => "user=" + env.CA_USER_NAME
+  )
+)
+
 # Copy environment variables
 setenv.add-environment = (
-  "CA_CRT"            => env.CA_CRT,
-  "CA_KEY"            => env.CA_KEY,
+  "CA_DIR"            => env.SIMPLE_CA_DIR,
+  "CA_CRT_FILE"       => env.CA_CRT_FILE,
   "CA_KEY_PWD_FILE"   => env.CA_KEY_PWD_FILE
 )
