--- a/config/etc/ssl/openssl.cnf
+++ b/config/etc/ssl/openssl.cnf
@@ -8,7 +8,7 @@
 # than one openssl command.
 
 [ default ]
-dir                     = /var/lib/simple-ca   # Top dir
+dir                     = /var/lib/simple-ca    # Top dir
 
 # The next part of the configuration file is used by the openssl req command.
 
@@ -49,8 +49,8 @@ subjectKeyIdentifier    = hash
 default_ca              = simple_ca             # The default CA section
 
 [ simple_ca ]
-certificate             = %%CA_CRT%%            # The CA cert
-private_key             = %%CA_KEY%%            # CA private key
+certificate             = /var/lib/simple-ca/secrets/ca.crt # The CA cert
+private_key             = /var/lib/simple-ca/secrets/ca.key # CA private key
 new_certs_dir           = $dir/newcerts         # Certificate archive
 serial                  = $dir/serial           # Serial number file
 crlnumber               = $dir/crlnumber        # CRL number file
