--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,9 @@ services:
           - test.local
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - simple_ca_secrets:/run/secrets
       # Use project dir as host volume for debugging tests if Docker host is local
       - ${TEST_PROJECT_DIR:-test_project_dir}:${PROJECT_DIR}
-      - simple_ca_secrets:/run/secrets
     working_dir: ${TEST_DIR}
 
   wait:
@@ -57,7 +57,7 @@ services:
           - wait.local
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - simple_ca_secrets:/run/secrets
+      - simple_ca_secrets:/run/secrets:ro
 
 volumes:
   test_project_dir:
