--- a/devel/Makefile
+++ b/devel/Makefile
@@ -8,14 +8,15 @@ DOCKER_IMAGE_TAGS	?=
 
 ### BUILD ######################################################################
 
-SIMPLE_CA_VERSION	?= 0.0.1
+# SIMPLE_CA_VERSION	?= 1.1.0
 
 # If the image configuration variables are not defined, the development image is
-# assumed to be the same as the production image
+# assumed to be the same as the latest image
 BUILD_CONFIG		?= $(BASE_IMAGE_TAG) \
 			   $(SIMPLE_CA_VERSION)
 
 ifeq ($(strip $(BUILD_CONFIG)),)
+DOCKER_CI_TARGET	?= docker-tag
 DOCKER_BUILD_TARGET	?= docker-tag
 DOCKER_REBUILD_TARGET	?= docker-tag
 endif
