--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
           - simple-ca.local
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
+      - simple_ca_data:/var/lib/simple-ca
       - simple_ca_secrets:/var/lib/simple-ca/secrets
 
   test:
@@ -29,7 +30,7 @@ services:
     env_file:
       - ${TEST_ENV_FILE}
     environment:
-      # - DOCKER_ENTRYPOINT_DEBUG=true
+      - DOCKER_ENTRYPOINT_DEBUG=true
       - DOCKER_ENTRYPOINT_INFO=true
       - WAIT_FOR_URL=https://simple-ca.local/ca.crt
     networks:
@@ -38,7 +39,7 @@ services:
           - test.local
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - simple_ca_secrets:/run/secrets
+      - simple_ca_secrets:/run/secrets:ro
       # Use project dir as host volume for debugging tests if Docker host is local
       - ${TEST_PROJECT_DIR:-test_project_dir}:${PROJECT_DIR}
     working_dir: ${TEST_DIR}
@@ -48,7 +49,7 @@ services:
     depends_on:
       - simple_ca
     environment:
-      # - DOCKER_ENTRYPOINT_DEBUG=true
+      - DOCKER_ENTRYPOINT_DEBUG=true
       - DOCKER_ENTRYPOINT_INFO=true
       - WAIT_FOR_URL=https://simple-ca.local/ca.crt
     networks:
@@ -61,4 +62,5 @@ services:
 
 volumes:
   test_project_dir:
+  simple_ca_data:
   simple_ca_secrets:
