--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: sicz/simple-ca:latest
           command: |
-            make vars ci
+            make ci
       - run:
           name: sicz/simple-ca:devel
           working_directory: devel
