--- a/rootfs/etc/lighttpd/server.conf
+++ b/rootfs/etc/lighttpd/server.conf
@@ -9,6 +9,7 @@ server.modules            += (
   "mod_auth",
   "mod_authn_file",
   "mod_cgi",
+  "mod_openssl",
   "mod_rewrite",
   "mod_setenv"
 )
